--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ margin-right:30px;
 <center>
 <img src="my_image.jpg" alt="image">
 <h1>Mahibull</h1>
-<h3>I am Mahibull,17 years old.Experience
+<h3>I am Mahibull, 17 years old.Experience
 Ui Ux Designer & Devloper Android
-App,Html & Css Advanced.</h3>
+App,Html & Css Basic.</h3>
 
 <a href="https://web.facebook.com/mhabdulla.Hossen"><i class="fa fa-facebook" style="font-size:35px;"></i></a>
 <i class="fa fa-twitter"  style="font-size:25px;"></i>
