--- a/index.html
+++ b/index.html
@@ -59,18 +59,6 @@ font-size:17px;
 border:none;
 cursor:pointer;
 }
-.span1{
-font-size:20px;
-border-right:1px solid white;
-color:skyblue;
-text-decoration:none;
-}
-
-.span2{
-font-size:20px;
-color:#ffffff;
-
-}
 div{
 text-align:center;
 background:#22252e;
@@ -140,6 +128,23 @@ margin-right:30px;
 }
  
   }
+  footer{
+  padding-top:20px;
+  text-align:center;
+  background:#22252e;
+  height:30px;
+  }
+  .ma{
+font-size:20px;
+border-right:1px solid white;
+color:skyblue;
+text-decoration:none;
+  }
+  .np{
+  font-size:20px;
+color:#ffffff;
+  }
+  
 </style>
 
 </head>
@@ -151,14 +156,16 @@ margin-right:30px;
 Ui Ux Designer & Devloper Android
 App,Html & Css Basic.</h3>
 
-<a href="https://web.facebook.com/mhabdulla.Hossen"><i class="fa fa-facebook" style="font-size:35px;"></i></a>
+<a href="https://web.facebook.com/mhabdulla.Hossen"><i class="fa fa-facebook" style="font-size:25px;"></i></a>
 <i class="fa fa-twitter"  style="font-size:25px;"></i>
 <i class="fa fa-linkedin" style="font-size:25px;"></i>
-<i class="fa fa-instagram"style="font-size:25px;"></i>
+
+<a href="https://wa.me/+8801710564041?text=HelloSir">
+<i class="fa fa-whatsapp"style="font-size:25px;"></i></a>
 <br>
 <br>
 
-<a href="https://web.facebook.com/mhabdulla.Hossen"><button>See My All Project</button></a>
+<a href="http://sizishop.unaux.com/?i=1"><button>See My All Project</button></a>
 <br>
 <br>
 <button>My TrickBd Post</button>
@@ -167,14 +174,16 @@ App,Html & Css Basic.</h3>
 <button>Visit Telegram Chanel</button>
 <br>
 <br>
-<button>Look me up on Google</button>
+<a href="https://www.pinterest.com/pin/679762137487483195/"><button>Look me up on Google</button></a>
 <br>
 <br>
-<div>
-<a href="#"<span class="span1">Mahibull&nbsp&nbsp</span></a>&nbsp&nbsp
-<span class="span2">N.B App Devloper</span>
-</div>
-
+<br>
+<br>
+<footer>
+   <a href="#link"><b class="ma">Mahibull&nbsp</b></a>   
+   <b class="np">N.B App Devloper</b>    
+	   
+    </footer>
 
 </center>
 </body>
