--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link rel="icon" href="favicon.png">
-<title>Mahibull</title>
+<title>About: Mahibull</title>
+<meta name="decoration" content="Mahibull is a android apps Devloper / Programmer Java, He is Basic Html, Css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -28,8 +29,8 @@ background-attachment: scroll;
 img{
 margin-top:20px;
 border-radius:50%;
-width:150px;
-height:150px;
+width:160px;
+height:170px;
 border:2px solid black;
 
 }
@@ -37,7 +38,7 @@ h1{
 color:white;
 letter-spacing: 2px;
 }
-h3{
+h4{
 color:white;
 margin-left:30px;
 margin-right:30px;
@@ -94,7 +95,7 @@ transition: 0.5s;
 h1{
 color:white;
 }
-h3{
+h4{
 width:300px;
 color:white;
 margin-left:30px;
@@ -120,7 +121,7 @@ color:skyblue;
 h1{
 color:white;
 }
-h3{
+h4{
 width:300px;
 color:white;
 margin-left:30px;
@@ -144,6 +145,9 @@ text-decoration:none;
   font-size:20px;
 color:#ffffff;
   }
+  a{
+  text-decoration:none;
+  }
   
 </style>
 
@@ -152,9 +156,9 @@ color:#ffffff;
 <center>
 <img src="my_image.jpg" alt="image">
 <h1>Mahibull</h1>
-<h3>I am Mahibull, 17 years old.Experience
-Ui Ux Designer & Devloper Android
-App,Html & Css Basic.</h3>
+<br>
+<h4>I am Mahibull, 17 years old.Experience
+Ui Ux Designer & Devloper Android , App,Html & Css Basic.</h4>
 
 <a href="https://web.facebook.com/mhabdulla.Hossen"><i class="fa fa-facebook" style="font-size:25px;"></i></a>
 <i class="fa fa-twitter"  style="font-size:25px;"></i>
