--- a/index.html
+++ b/index.html
@@ -160,16 +160,16 @@ color:#ffffff;
 <h4>I am Mahibull, 17 years old.Experience
 Ui Ux Designer & Devloper Android , App,Html & Css Basic.</h4>
 
-<a href="https://web.facebook.com/mhabdulla.Hossen"><i class="fa fa-facebook" style="font-size:25px;"></i></a>
+<a href="https://www.facebook.com/mhabdulla.Hossen?mibextid=ZbWKwL"><i class="fa fa-facebook" style="font-size:25px;"></i></a>
 <i class="fa fa-twitter"  style="font-size:25px;"></i>
 <i class="fa fa-linkedin" style="font-size:25px;"></i>
 
-<a href="https://wa.me/+8801710564041?text=HelloSir">
+<a href="https://wa.me/+8801404980733?text=Hello">
 <i class="fa fa-whatsapp"style="font-size:25px;"></i></a>
 <br>
 <br>
 
-<a href="http://sizishop.unaux.com/?i=1"><button>See My All Project</button></a>
+<a href="#"><button>See My All Project</button></a>
 <br>
 <br>
 <button>My TrickBd Post</button>
